--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
 	"devDependencies": {
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
 		"@babel/preset-react": "^7.27.1",
-		"@rollup/plugin-babel": "^6.0.4",
-		"@rollup/plugin-node-resolve": "^16.0.0",
-		"@rollup/pluginutils": "^5.1.4",
-		"@wordpress/block-editor": "^14.9.0",
-		"@wordpress/block-library": "^9.14.0",
-		"@wordpress/blocks": "^14.3.0",
+		"@rollup/plugin-babel": "^6.1.0",
+		"@rollup/plugin-node-resolve": "^16.0.3",
+		"@rollup/pluginutils": "^5.3.0",
+		"@wordpress/block-editor": "^15.9.0",
+		"@wordpress/block-library": "^9.36.0",
+		"@wordpress/blocks": "^15.9.0",
+		"@wordpress/components": "^30.9.0",
 		"@wordpress/data": "^10.23.0",
 		"@wordpress/element": "^6.14.0",
+		"@wordpress/hooks": "^4.36.0",
 		"@wordpress/html-entities": "^4.14.0",
-		"@wordpress/i18n": "^5.14.0",
-		"@wordpress/icons": "^10.22.0",
+		"@wordpress/i18n": "^6.9.0",
+		"@wordpress/icons": "^11.3.0",
 		"@wordpress/rich-text": "^7.14.0",
-		"rollup": "^4.34.8"
+		"rollup": "^4.53.3"
 	}
 }
