--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 		}
 	},
 	"require": {
-		"doubleedesign/comet-components-core": "*"
+		"doubleedesign/comet-components-core": "0.3.0"
 	},
 	"repositories": [
 		{
