Feat(WP Blocks): Improve TinyMCE config and add plugin for inserting and editing pullquotes

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		}
 	},
 	"require": {
-		"doubleedesign/comet-components-core": "0.3.0"
+		"doubleedesign/comet-components-core": "0.3.0",
+		"tomloprod/colority": "^1.4"
 	},
 	"repositories": [
 		{
