--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@rollup/plugin-babel": "^6.1.0",
 		"@rollup/plugin-node-resolve": "^16.0.3",
 		"@rollup/pluginutils": "^5.3.0",
+		"@types/tinymce": "^4.6.9",
 		"@wordpress/block-editor": "^15.9.0",
 		"@wordpress/block-library": "^9.36.0",
 		"@wordpress/blocks": "^15.9.0",
