--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@wordpress/i18n": "^6.9.0",
 		"@wordpress/icons": "^11.3.0",
 		"@wordpress/rich-text": "^7.14.0",
+		"@wordpress/server-side-render": "^6.13.0",
 		"rollup": "^4.53.3"
 	}
 }
