Build: Require PHP 8.4 for core and blocks

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		}
 	},
 	"require": {
-		"doubleedesign/comet-components-core": "0.3.0"
+		"php": ">=8.4",
+		"doubleedesign/comet-components-core": "dev-master"
 	},
 	"repositories": [
 		{
